crates/cyrs-sema/src/snapshots/cyrs_sema__infer__tests__infer_optional_prop_read_is_any.snap
---
source: crates/cyrs-sema/src/infer.rs
expression: run_with_return_type(&stmt)
---
diagnostics: 0
return[0]: Any
